--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,11 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.5+'
+    }
+}
 apply plugin: 'android-library'
 
 android {
