Upgraded to gradle 0.7

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.5+'
+        classpath 'com.android.tools.build:gradle:0.7+'
     }
 }
 apply plugin: 'android-library'
@@ -27,5 +27,9 @@ android {
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
         }
+    }
+    // This is important, it will run lint checks but won't abort build
+    lintOptions {
+        abortOnError false
     }
 }
