--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.10.+'
+        classpath 'com.android.tools.build:gradle:0.13.0'
     }
 }
 apply plugin: 'android-library'
 
 android {
     compileSdkVersion 17
-    buildToolsVersion = "19"
+    buildToolsVersion = "20"
 
     sourceSets {
         defaultConfig {
